src/render/commit/snapshots/webgit__render__commit__tests__build_patch.snap
---
source: src/render/commit.rs
expression: patch
---
From 0123abcd0123abcd0123abcd0123abcd0123abcd Mon Sep 17 00:00:00 2001
From: Kunal Mehta <author@example.org>
Date: Thu, 15 Jan 2026 12:34:56 +0000
Subject: [PATCH] Fix the thing

Longer explanation with <html> & "chars".
See 0123abcd for context.
---
 src/main.rs | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)

diff --git a/src/main.rs b/src/main.rs
index 1111111..2222222 100644
--- a/src/main.rs
+++ b/src/main.rs
@@ -1,2 +1,2 @@
 alpha
-beta
+beta changed
-- 
webgit <version>
