src/render/commit/snapshots/webgit__render__commit__tests__commit_html_wide_context_and_ignored_whitespace.snap
---
source: src/render/commit.rs
expression: render(props)
---
<div class="diff-opts">
<b class="diff-opts-title">diff options</b>
<div class="diff-opts-row">
<span class="diff-opts-label">context</span>
<span class="seg">
<a href="#!/commit/abcdef01abcdef01abcdef01abcdef01abcdef01?context=35&amp;ignorews=1" class="seg-btn">−</a>
<span class="seg-num">40</span>
<span class="seg-btn off">+</span>
</span>
</div>
<div class="diff-opts-row">
<span class="diff-opts-label">space</span>
<span class="seg">
<a href="#!/commit/abcdef01abcdef01abcdef01abcdef01abcdef01?context=40" class="seg-btn">include</a>
<span class="seg-btn on">ignore</span>
</span>
</div>
<div class="diff-opts-row">
<span class="diff-opts-label">mode</span>
<span class="seg">
<span class="seg-btn on">unified</span>
<a href="#!/commit/abcdef01abcdef01abcdef01abcdef01abcdef01?dt=2&amp;context=40&amp;ignorews=1" class="seg-btn">stat only</a>
</span>
</div>
<div class="diff-opts-row">
<span class="diff-opts-label">layout</span>
<span class="seg">
<span class="seg-btn on">inline</span>
<a href="#!/commit/abcdef01abcdef01abcdef01abcdef01abcdef01?context=40&amp;ignorews=1&amp;ss=1" class="seg-btn">side by side</a>
</span>
</div>
<div class="diff-opts-reset">
<a href="#!/commit/abcdef01abcdef01abcdef01abcdef01abcdef01">reset to defaults</a>
</div>
</div>
<table class="tag-table">
<tbody>
<tr>
<td class="label">author</td>
<td>Kunal Mehta &lt;author@example.org&gt; 2026-01-15 12:34:56 +00:00</td>
</tr>
<tr>
<td class="label">committer</td>
<td>Committer Person &lt;committer@example.org&gt; 2026-01-15 13:00:00 +00:00</td>
</tr>
<tr>
<td class="label">commit</td>
<td class="mono">0123abcd0123abcd0123abcd0123abcd0123abcd (<a href="#" class="patch-link">patch</a>)</td>
</tr>
<tr>
<td class="label">tree</td>
<td class="mono">
<a href="#!/tree?h=0123abcd0123abcd0123abcd0123abcd0123abcd">fedcba98fedcba98fedcba98fedcba98fedcba98</a>
</td>
</tr>
</tbody>
</table><pre class="tag-message">Fix the thing

Longer explanation with &lt;html&gt; &amp; "chars".
See <a href="#!/commit/0123abcd">0123abcd</a> for context.</pre><div class="diffstat">
<p class="diffstat-summary">1 file changed, 3 insertions(+), 3 deletions(-)</p>
<table class="diffstat-table">
<tr>
<td class="diffstat-name">src/main.rs</td>
<td class="diffstat-count">5</td>
<td class="diffstat-bar-cell">
<span class="diffstat-bar">
<span class="bar-add bar-w-30">
</span>
<span class="bar-del bar-w-10">
</span>
</span>
</td>
<td class="diffstat-pm">
<span class="add-count">+3</span>
<span class="del-count">-2</span>
</td>
</tr>
</table>
</div><pre class="diff-pre"><span class="diff-hunk">diff --git a/src/main.rs b/src/main.rs
</span><span class="diff-hunk">index 1111111..2222222 100644
</span><span class="diff-del">--- a/src/main.rs
</span><span class="diff-add">+++ b/src/main.rs
</span><span class="diff-hunk">@@ -1,5 +1,6 @@
</span><span class="diff-ctx"> fn main() {
</span><span class="diff-del">-    a();
</span><span class="diff-del">-    b();
</span><span class="diff-add">+    A();
</span><span class="diff-add">+    merged();
</span><span class="diff-ctx">     c();
</span><span class="diff-add">+    extra();
</span><span class="diff-ctx"> }
</span></pre>
